# T-SERIESBOT

./: Dockerfile  config.py  pyproject.toml  pyproject.toml.txt  requirements.txt
PURVIMUSIC/: __init__.py
PURVIMUSIC/assets/: cookies.txt
PURVIMUSIC/plugins/play/: play.py
PURVIMUSIC/plugins/tools/: disk.py
PURVIMUSIC/utils/: thumbnails.py
PURVIMUSIC/utils/inline/: play.py
